themes/dijit.css
/* ... */
.dijitInline {
	/*  To inline block elements.
		Similar to InlineBox below, but this has fewer side-effects in Moz.
		Also, apparently works on a DIV as well as a FIELDSET.
	*/
	display:inline-block;			/* webkit and FF3 */
	#zoom: 1; /* set hasLayout:true to mimic inline-block */
	#display:inline; /* don't use .dj_ie since that increases the priority */
	border:0;
	padding:0;
	vertical-align:middle;
	#vertical-align: auto;	/* makes TextBox,Button line up w/native counterparts on IE6 */
}

.dijitHidden {
	/* To hide unselected panes in StackContainer etc. */
	display: none !important;
}

.dijitVisible {
	/* To show selected pane in StackContainer etc. */
	display: block !important;	/* override user's display:none setting via style setting or indirectly via class */
	position: relative;			/* to support setting width/height, see #2033 */
}

.dijitInputContainer {
	/* for positioning of placeHolder */
	#zoom: 1;
	overflow: hidden;
	float: none !important; /* needed by FF to squeeze the INPUT in */
	position:relative;
}

.dj_ie .dijitTextBox INPUT {
	font-size: 100%;
	overflow: visible;
}
.dijitTextBox INPUT.dijitValidationInner,
.dijitTextBox INPUT.dijitArrowButtonInner {
	#line-height: 100%; /* IE7 (and somewhat an IE6) problem where the icon is not centered vertically w/o this */
	#overflow: hidden; /* IE6 combobox button won't go to the bottom w/o this */
}
.dijitTextBox .dijitSpinnerButtonContainer,
.dijitTextBox .dijitArrowButtonContainer,
.dijitTextBox .dijitValidationContainer {
	float: right;
	text-align: center;
}
.dijitTextBox INPUT.dijitInputField {
	/* override unreasonable user styling of buttons and icons */
	padding-left: 0 !important;
	padding-right: 0 !important;
}
.dijitTextBox .dijitValidationContainer {
	display: none;
}
.dijitInlineTable {
	/* To inline tables with a given width set (otherwise, use dijitInline above) */
	display:inline-table;
	display:inline-block;		/* webkit and FF3 */
	#zoom: 1; /* set hasLayout:true to mimic inline-block */
	#display:inline; /* don't use .dj_ie since that increases the priority */
	box-sizing: content-box; -moz-box-sizing: content-box;
	border:0;
	padding:0;
}

.dijitTeeny {
	font-size:1px;
	line-height:1px;
}

/*
 * Popup items have a wrapper div (dijitPopup)
 * with the real popup inside, and maybe an iframe too
 */
.dijitPopup {
	position: absolute;
	background-color: transparent;
	margin: 0;
	border: 0;
	padding: 0;
}
.dijit_a11y .dijitPopup,
.dijit_ally .dijitPopup div,
.dijit_a11y .dijitPopup table,
.dijit_a11y .dijitTooltipContainer {
	background-color: white !important;
}

.dijitPositionOnly {
	/* Null out all position-related properties */
	padding: 0 !important;
	border: 0 !important;
	background-color: transparent !important;
	background-image: none !important;
	height: auto !important;
	width: auto !important;
}

.dijitNonPositionOnly {
	/* Null position-related properties */
	float: none !important;
	position: static !important;
	margin: 0 0 0 0 !important;
	vertical-align: middle !important;
}

.dijitBackgroundIframe {
	/* iframe used to prevent problems with PDF or other applets overlaying menus etc */
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	z-index: -1;
	border: 0;
	padding: 0;
	margin: 0;
}

.dijitDisplayNone {
	/* hide something.  Use this as a class rather than element.style so another class can override */
	display:none !important;
}

.dijitContainer {
	/* for all layout containers */
	overflow: hidden;	/* need on IE so something can be reduced in size, and so scrollbars aren't temporarily displayed when resizing */
}

/****
		A11Y
 ****/
.dijit_a11y * {
	background-image:none !important;
}

.dijit_a11y .dijitCalendarIncrementControl {
	display: none;	/* don't display icon */
}
.dijit_a11y .dijitA11ySideArrow {
	display: inline !important; /* display text instead */
	cursor: pointer;
}

/*
 * Since we can't use shading in a11y mode, and since the underline indicates today's date,
 * use a border to show the selected date.
 * Avoid screen jitter when switching selected date by compensating for the selected node's
 * border w/padding on other nodes.
 */
.dijit_a11y .dijitCalendarDateLabel {
	padding: 1px;
}
.dijit_a11y .dijitCalendarSelectedDate .dijitCalendarDateLabel {
	border: solid 1px black;
	padding: 0px;
}
.dijit_a11y .dijitCalendarDateTemplate {
	padding-bottom: 0.1em !important;	/* otherwise bottom border doesn't appear on IE */
}

.dijit_a11y .dijit * {
	background:white !important;
	color:black !important;
}
.dijit_a11y .dijitButtonNode {
	border-color: black!important;
	border-style: outset!important;
	border-width: medium!important;
}

.dijit_a11y .dijitTextBoxReadOnly .dijitInputField,
.dijit_a11y .dijitTextBoxReadOnly .dijitButtonNode {
	border-style: outset!important;
	border-width: medium!important;
	border-color: #999 !important;
	color:#999 !important;
}

/* button inner contents - labels, icons etc. */
.dijitButtonNode * {
	vertical-align: middle;
}
.dijit_a11y .dijitArrowButtonInner {
	width: 1em !important;
}
.dijitButtonNode .dijitArrowButtonInner {
	background: no-repeat center;
	width: 12px;
	height: 12px;
	direction: ltr; /* needed by IE/RTL */
}

/****
		3-element borders:  ( dijitLeft + dijitStretch + dijitRight )
 ****/

.dijitLeft {
	/* Left part of a 3-element border */
	background-position:left top;
	background-repeat:no-repeat;
}

.dijitStretch {
	/* Middle (stretchy) part of a 3-element border */
	white-space:nowrap;			/* MOW: move somewhere else */
	background-repeat:repeat-x;
}

.dijitRight {
	/* Right part of a 3-element border */
	#display:inline;				/* IE7 sizes to outer size w/o this */
	background-position:right top;
	background-repeat:no-repeat;
}

/* Buttons */

.dijitToggleButton,
.dijitButton,
.dijitDropDownButton,
.dijitComboButton {
	/* outside of button */
	margin: 0.2em;
}

.dijitButtonContents {
	display: block;		/* to make focus border rectangular */
}
/* ... */

